# seo

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  Readme.md  __init__.py  ave_seo.py  pelican_seo.py  pyproject.toml  settings.py  tasks.py  test_pelican_seo.py
.github/workflows/: main.yml
data_tests/: __init__.py  data_tests.py
pelican/plugins/ave_seo/: __init__.py  ave_seo.py
pelican/plugins/ave_seo/seo_enhancer/: __init__.py
pelican/plugins/ave_seo/seo_report/: __init__.py
pelican/plugins/ave_seo/seo_report/template/: seo_report.html
pelican/plugins/ave_seo/tests/: test_article_schema_creator.py  test_seo_enhancer.py
pelican/plugins/seo/: RELEASE.md  __init__.py  seo.py  settings.py
pelican/plugins/seo/seo_enhancer/: __init__.py  robots_file_creator.py
pelican/plugins/seo/seo_enhancer/html_enhancer/: __init__.py  article_schema_creator.py  breadcrumb_schema_creator.py  canonical_url_creator.py  open_graph.py  twitter_cards.py
pelican/plugins/seo/seo_report/: __init__.py
pelican/plugins/seo/seo_report/seo_analyzer/: __init__.py  content_title_analyzer.py  internal_link_analyzer.py  page_description_analyzer.py  page_title_analyzer.py
pelican/plugins/seo/seo_report/static/: seo_report.css
pelican/plugins/seo/seo_report/template/: seo_report.html
pelican/plugins/seo/tests/: RELEASE.md  conftest.py  test_article_schema_creator.py  test_breadcrumb_schema_creator.py  test_canonical_url_creator.py  test_content_title_analyzer.py  test_html_content.py  test_internal_link_analyzer.py  test_open_graph.py  test_page_description_analyzer.py  test_page_title_analyzer.py  test_robots_file_creator.py  test_run_robots_file.py  test_seo_enhancer.py  test_seo_report.py  test_settings.py  test_twitter_cards.py
seo_enhancer/: __init__.py  robots_file_creator.py
seo_enhancer/html_enhancer/: __init__.py  article_schema_creator.py  breadcrumb_schema_creator.py  canonical_url_creator.py
seo_report/: __init__.py
seo_report/seo_analyzer/: __init__.py  content_title_analyzer.py  internal_link_analyzer.py  page_description_analyzer.py  page_title_analyzer.py
seo_report/static/: seo_report.css
seo_report/template/: seo_report.html
tests/: conftest.py  data_tests.py  test_article_schema_creator.py  test_ave_seo.py  test_breadcrumb_schema_creator.py  test_canonical_url_creator.py  test_content_title_analyzer.py  test_internal_link_analyzer.py  test_page_description_analyzer.py  test_page_title_analyzer.py  test_pelican_seo.py  test_robots_file_creator.py  test_seo_enhancer.py  test_seo_report.py
