[tool.poetry]
name = "pelican-seo"
version = "1.2.2"
description = "Pelican plugin to improve SEO (Search Engine Optimization) to reach top positions on search engines."
authors = ["Maëva Brunelles <contact@tremacorp.fr>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "seo", "search", "optimization"]
repository = "https://github.com/pelican-plugins/seo"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/seo/issues"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.2", optional = true}
beautifulsoup4 = "^4.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}
flake8 = "^3.9"
flake8-black = "^0.2"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2"
pytest = "^6.0"
pytest-cov = "^2.8"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
Werkzeug = "^1.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "SEO"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" and "seo" as separate import sections
known_pelican = "pelican"
known_seo = "seo"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,SEO,FIRSTPARTY,LOCALFOLDER"

known_third_party = [
    "pytest",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
